ODP-3596: JDK8 compatibility